# code-training

./: .gitignore  CMakeLists.txt  active_object.h  active_object_2.h  aux.cpp  boost_signals2.cpp  class_factory.h  code_training  connection.cpp  custom_delete.cpp  data_struct.h  doc_view.cpp  main.cpp  public.h  sfinae.cpp  shared_ptr.cpp  signal_slot.cpp  singleton.h  slot.cpp  time_provider_consumer.cpp  tracked.cpp
